--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -14,3 +14,6 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
+
+# Suggestion for bluetooth issues https://www.reddit.com/r/crkbd/comments/1cglz08/how_stable_are_your_zmk_cornes_bt_connection/
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
