--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -17,3 +17,4 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 # Suggestion for bluetooth issues https://www.reddit.com/r/crkbd/comments/1cglz08/how_stable_are_your_zmk_cornes_bt_connection/
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
